--- a/1-bimestre/programacao-web/projetos/projeto1-desenvolvimento-de-pagina-institucional-em-html/index.html
+++ b/1-bimestre/programacao-web/projetos/projeto1-desenvolvimento-de-pagina-institucional-em-html/index.html
@@ -34,7 +34,7 @@
     </ol>
     <div>
     <img src="/1-bimestre/programacao-web/projetos/projeto1-desenvolvimento-de-pagina-institucional-em-html/src/img/img.png" alt="foto da ong">
-    <a href="https://www.google.com>">Inscreva-se agora</a>
+    <a href="https://www.google.com">Inscreva-se agora</a>
     </div>
 </div>
 </body>
